compiler/tests/liva/errors/e0002_constant_redefined.liva
// Error Test: E0002 — Constant already defined in scope
// EXPECT: E0002
main() {
    const MAX = 100
    const MAX = 200
    print(MAX)
}
